apps/immich/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich
  template:
    metadata:
      labels:
        app: immich
    spec:
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: immich-data-claim
      - name: shm
        emptyDir:
          medium: Memory
          sizeLimit: 128Mi
      securityContext:
        runAsUser: 3822
        runAsGroup: 3822
      containers:
      - name: app
        image: ghcr.io/immich-app/immich-server:v3@sha256:be56bc12c17a84617a979ad1eab1d9105bbec1955ffa7da09b3f9cf79d3bd09d
        volumeMounts:
        - name: data
          mountPath: /data
          subPath: library
        ports:
        - containerPort: 2283
        startupProbe:
          httpGet:
            path: /api/server/ping
            port: 2283
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 30  # 30 * 10s = 5 minutes startup leeway
        readinessProbe:
          httpGet:
            path: /api/server/ping
            port: 2283
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 3
      - name: db
        image: ghcr.io/immich-app/postgres:16-vectorchord0.4.3-pgvectors0.2.0@sha256:1a078b237c1d9b420b0ee59147386b4aa60d3a07a8e6a402fc84a57e41b043a4
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
          subPath: database
        - name: shm
          mountPath: /dev/shm
      - name: redis
        image: valkey/valkey:9@sha256:418652cfb58ef879d4978c33553735d7147016032d5aefaa14c828e611eb9dfd
