apps/immich/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-web
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: immich
  ports:
  - port: 80
    targetPort: 2283
